fix: decrease font size of section titles for improved readability

--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ main {
 .features-section>.section-title {
   color: var(--secondary-color);
   font-family: 'Inter', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.375rem;
   font-style: normal;
   font-weight: bold;
   line-height: auto;
